# nba-betting-model

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: feature-engineering.ipynb
scripts/: analyze_line_divergence.py  app.py  build_historical_features.py  build_player_features.py  build_today_game_features.py  daily_pipeline.py  dashboard.py  pnl_report.py  run_morning.py  run_settle.py  settle_results.py  setup_db.py  train_game_outcome.py  train_player_props.py  verify_phase1.py
src/betting/: edge_calculator.py  entry_builder.py  kelly.py  line_divergence.py  tracker.py
src/data/: db.py  nba_api_client.py
src/data/migrations/: 001_base_tables.sql  002_team_game_logs.sql  003_betting_tables.sql  004_line_divergences.sql
src/data/scrapers/: bbref.py  injury_report.py  underdog.py
src/features/: pipeline.py
src/features/player/: availability.py  (+4 more)
src/models/: backtest.py  calibration.py  ensemble.py  game_outcome.py  player_props.py
src/narrative/: __init__.py  evidence.py  generator.py  templates.py  verifier.py
src/utils/: constants.py
templates/: index.html
tests/: test_backtest.py  test_bbref.py  test_calibration.py  test_edge_calculator.py  test_elo.py  test_ensemble.py  test_entry_builder.py  test_form.py  test_four_factors.py  test_game_outcome.py  test_h2h.py  test_injury_report.py  test_kelly.py  test_narrative.py  test_nba_api_client.py  test_pace.py  test_pipeline.py  test_player_features.py  test_player_props.py  test_ratings.py  test_schedule.py  test_settle.py  test_tracker.py  test_underdog_scraper.py
(+7 files in other folders)
